# pi-switch

./: .gitignore  .npmignore  2026-06-13-063434-usershaoworkspacelearncc-switch-cli.txt  BUILD_MUSL.md  Cargo.toml  README.md  README_ZH.md  WEBUI_GUIDE.md  index.js  package-lock.json  package.json  pi-session-2026-06-12T09-30-29-129Z_019ebb2b-2b89-79bf-a099-b7b6e2f064ad.html  pi-session-2026-06-12T11-08-39-966Z_019ebb85-0e9e-7008-8060-33d664247d98.html  pi-switch-native.cjs
.github/workflows/: ci.yml
extensions/: index.ts
src/: commands.js  core.js  presets.js  proxy.js  stats.js  sync.js  tui.js
src-rust/: config.rs  daemon.rs  error.rs  lib.rs  ops.rs  presets.rs  proxy.rs  service.rs  stats.rs  sync.rs  tui.rs  web.rs
src-rust/tui/: app.rs  data.rs  form.rs  i18n.rs  route.rs  terminal.rs  text_edit.rs  theme.rs  ui.rs
src-rust/tui/ui/: chrome.rs  overlay.rs  pages.rs  profiles.rs
webui/: index.html  package.json  vite.config.ts
webui/src/: App.tsx  api.ts  index.css  types.ts
webui/src/components/: BackupsPanel.tsx  DoctorPanel.tsx  HomePanel.tsx  ProfilesPanel.tsx  ProxyPanel.tsx  SettingsPanel.tsx  StatsPanel.tsx  ui.tsx
