[package]
name = "pi-switch-native"
version = "0.1.0"
description = "pi-switch native core - provider management and proxy"
edition = "2021"

[lib]
path = "src-rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# napi-rs
napi = { version = "2", features = ["async", "napi6", "serde-json"] }
napi-derive = "2"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# config
dirs = "5"

# async runtime
tokio = { version = "1", features = ["full"] }

# http proxy (matching cc-switch's axum choice)
axum = { version = "0.7", features = ["tokio", "http1", "json"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }

# TUI (matching cc-switch's ratatui)
ratatui = "0.30"
crossterm = "0.29"

# crypto
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
rand = "0.8"

# utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
